--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-numpy==1.24.3
-opencv-python==4.7.0.72
-mediapipe==0.9.1.0
-pyautogui==0.9.53
-streamlit==1.25.0
-Pillow==9.5.0
-cvzone==1.5.6
+mediapipe-0.10.14
+
+protobuf-4.25.4
+
+tensorflow 2.17.0
+
+numpy==1.25.2
+
+opencv-python==4.8.0.76
+
+pyautogui==0.9.54
+
+streamlit==1.26.0
+
+Pillow==10.0.0
+
+cvzone==1.6.1
+
 google-generativeai==0.1.0
